Corretto esecutivi per errore sul footprint del condensatore Corretto distribuzione pista ISo e relativi componenti Inviato nuovi gerber a Solda

--- a/ESECUTIVI/Gerber 25-334-1/25-334-1.DTS
+++ b/ESECUTIVI/Gerber 25-334-1/25-334-1.DTS
@@ -1,16 +1,16 @@
-********************************************************************
-*                                                                  *
-* DRILL TAPE SUMMARY REPORT                                        *
-*                                                                  *
-* E:\00.LAVORI IN CORSO\METALTRONICA\25-334-1 (PFC )\25-334-1.MAX  *
-* Tue Feb 03 19:33:40 2026                                         *
-*                                                                  *
-********************************************************************
+************************************************************************************
+*                                                                                  *
+* DRILL TAPE SUMMARY REPORT                                                        *
+*                                                                                  *
+* E:\00.CAD\00.PROGETTI\METALTRONICA\25-334-X (PFC )\25-334-1 (PFC )\25-334-1.MAX  *
+* Tue Feb 10 15:24:54 2026                                                         *
+*                                                                                  *
+************************************************************************************
 
 TOOL     SIZE     QUANTITY FEED     SPEED    
 ---------------------------------------------
-T1       79       274      200      100                                                                                 
-T2       276      613      200      100                                                                                 
+T1       79       269      200      100                                                                                 
+T2       276      615      200      100                                                                                 
 T3       394      25       200      100                                                                                 
 T4       433      19       200      100                                                                                 
 T5       472      8        200      100                                                                                 
